Autenticação e navegação entre menus funcionando

--- a/Complete Code/stock/src/main/resources/templates/cadastro-vendedor.html
+++ b/Complete Code/stock/src/main/resources/templates/cadastro-vendedor.html
@@ -18,7 +18,7 @@
   <body>
 
     <header class="container-fluid text-center mt-5">
-      <h1> <a href="index.html">Easy Stock</a> </h1>
+      <h1> <a th:href="@{login}" >Easy Stock</a> </h1>
     </header>
 
     <main>
