--- a/Complete Code/stock/src/main/resources/templates/historico-vendas-site.html
+++ b/Complete Code/stock/src/main/resources/templates/historico-vendas-site.html
@@ -35,7 +35,7 @@
 			  <li><a href="#" class="sair" type="submit" onclick="document.location='gerenciar-produtos'">Gerenciar Produtos</a></li>
 			  <li><a href="#" class="sair" type="submit" onclick="document.location='#'">Ver Histórico de Vendas</a></li>
 			  <li><a href="#" class="sair" type="submit" onclick="document.location='cadastro-vendedor'">Cadastrar Vendedor</a></li>
-			  <li><a href="#" class="sair" type="submit" onclick="document.location='login'">Sair</a></li>
+			  <li><a href="#" class="sair" type="submit" onclick="document.location='/'">Sair</a></li>
 			</ul>            
 		</div>
 	  </nav>
