--- a/Complete Code/stock/src/main/resources/templates/listagem-produtos.html
+++ b/Complete Code/stock/src/main/resources/templates/listagem-produtos.html
@@ -41,7 +41,7 @@
                   <li><a href="#" onclick="document.location='pedidos'">Ver Pedidos</a></li>
                 </ul>
               </li>
-              <li><a href="#" class="sair" type="submit" onclick="document.location='login.html'">Sair</a></li>
+              <li><a href="#" class="sair" type="submit" onclick="document.location='/'">Sair</a></li>
             </ul>        
           </div>      
         </div>
