--- a/Complete Code/stock/src/main/resources/templates/pedidos.html
+++ b/Complete Code/stock/src/main/resources/templates/pedidos.html
@@ -42,7 +42,7 @@
                 <li><a href="#" onclick="document.location='#'">Ver Pedidos</a></li>
               </ul>
             </li>
-            <li><a href="#" class="sair" type="submit" onclick="document.location='login.html'">Sair</a></li>
+            <li><a href="#" class="sair" type="submit" onclick="document.location='login'">Sair</a></li>
           </ul>        
         </div>      
       </div>
