--- a/Complete Code/stock/src/main/resources/templates/painel-cliente.html
+++ b/Complete Code/stock/src/main/resources/templates/painel-cliente.html
@@ -16,17 +16,17 @@
 <body>
 
   <div class="text-center mt-5">
-    <a href="index.html"> <h1 class="h1-lg"> Easy Stock </h1> </a>
+    <a th:href="@{/}"> <h1 class="h1-lg"> Easy Stock </h1> </a>
     <h2 class="h2-lg"> Painel Cliente </h2>
     <div class="form-center">
       <div class="input-container mt-4">
-        <button onclick="document.location='login'"> Sair Conta </button>
+        <button onclick="document.location='sair'"> Sair Conta </button>  <!-- Não é necessário TAG do thymeleaf-->
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='listagem-produtos'"> Ver Produtos </button>
+        <button onclick="document.location='produtos'"> Ver Produtos </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='carrinho-compras'"> Ver Carrinho de Compras </button>
+        <button onclick="document.location='carrinho'"> Ver Carrinho de Compras </button>
       </div>
       <div class="input-container mt-4">
         <button onclick="document.location='pedidos'"> Ver Pedidos </button>
