--- a/Complete Code/stock/src/main/resources/templates/painel-vendedor.html
+++ b/Complete Code/stock/src/main/resources/templates/painel-vendedor.html
@@ -16,17 +16,17 @@
 <body>
 
   <div class="text-center mt-5">
-    <a href="index.html"> <h1 class="h1-lg"> Easy Stock </h1> </a>
+    <a th:href="@{/}" > <h1 class="h1-lg"> Easy Stock </h1> </a>
     <h2 class="h2-lg"> Painel Vendedor </h2>
     <div class="form-center">
       <div class="input-container mt-4">
-        <button onclick="document.location='login'"> Sair Conta </button>
+        <button onclick="document.location='sair'"> Sair Conta </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='gerenciar-produtos'"> Gerenciar Produtos </button>
+        <button onclick="document.location='gerenciar'"> Gerenciar Produtos </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='historico-vendas-site'"> Ver Histórico de Vendas do Site </button>
+        <button onclick="document.location='historico'"> Ver Histórico de Vendas do Site </button>
       </div>
       <div class="input-container mt-4">
         <button onclick="document.location='cadastro-vendedor'"> Cadastrar Novo Vendedor </button>
