--- a/Complete Code/stock/src/main/resources/templates/gerenciar-produtos.html
+++ b/Complete Code/stock/src/main/resources/templates/gerenciar-produtos.html
@@ -26,15 +26,15 @@
 			  <span class="icon-bar"></span>
 			  <span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#" th:onclick="document.location='painel-vendedor'">Conta Vendedor</a>
+			<a class="navbar-brand" href="#" onclick="document.location='painel-vendedor'">Conta Vendedor</a>
 		  </div>
 			
 			
 			<!-- Links -->
 			<ul class="nav navbar-nav">
-			  <li><a href="#" class="sair" type="submit" th:onclick="document.location='historico-vendas-site'">Ver Histórico de Vendas</a></li>
-			  <li><a href="#" class="sair" type="submit" th:onclick="document.location='cadastro-vendedor'">Cadastrar Vendedor</a></li>
-			  <li><a href="#" class="sair" type="submit" th:onclick="document.location='/">Sair</a></li>
+			  <li><a href="#" class="sair" type="submit" onclick="document.location='historico-vendas-site'">Ver Histórico de Vendas</a></li>
+			  <li><a href="#" class="sair" type="submit" onclick="document.location='cadastro-vendedor'">Cadastrar Vendedor</a></li>
+			  <li><a href="#" class="sair" type="submit" onclick="document.location='/">Sair</a></li>
 			</ul>            
 		</div>
 	  </nav>
@@ -64,11 +64,11 @@
                 <tbody>
 					<div th:each="produto: ${produtos}">
 						<tr>
-							<td th:text="${produto.id}" />
-							<td th:text="${produto.nome}" />
-							<td th:text="${produto.descricao}" />
-							<td th:text="${produto.preco}" />
-							<td th:text="${produto.estoque}" />
+							<td th:text="${produto.id}"> </td>
+							<td th:text="${produto.nome}"> </td>
+							<td th:text="${produto.descricao}"> </td>
+							<td th:text="${produto.preco}"> </td>
+							<td th:text="${produto.quantidade}"> </td>
 							<td>
 								<a th:href="@{#editEmployeeModal{id}(id=${produto.id})}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Editar">&#xE254;</i></a>
 								<a th:href="@{#deleteEmployeeModal{id}(id=${produto.id})}" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Deletar">&#xE872;</i></a>
@@ -98,7 +98,7 @@
 											</div>
 											<div class="form-group">
 												<label>Estoque</label>
-												<input type="number" name="estoque" class="form-control" th:value="${produto.preco}" required>
+												<input type="number" name="estoque" class="form-control" th:value="${produto.quantidade}" required>
 											</div>					
 										</div>
 										<div class="modal-footer">
