--- a/Complete Code/stock/src/main/resources/templates/gerenciar-produtos.html
+++ b/Complete Code/stock/src/main/resources/templates/gerenciar-produtos.html
@@ -15,35 +15,43 @@
 </head>
   
   <body>
+	<!-- NAVBAR -->
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
-		
-		  <!-- BRAND -->
-		  <div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#alignment-example" aria-expanded="false">
-			  <span class="sr-only">Toggle navigation</span>
-			  <span class="icon-bar"></span>
-			  <span class="icon-bar"></span>
-			  <span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="#" onclick="document.location='painel-vendedor'">Conta Vendedor</a>
-		  </div>
-			
-			
-			<!-- Links -->
-			<ul class="nav navbar-nav">
-			  <li><a href="#" class="sair" type="submit" onclick="document.location='historico-vendas-site'">Ver Histórico de Vendas</a></li>
-			  <li><a href="#" class="sair" type="submit" onclick="document.location='cadastro-vendedor'">Cadastrar Vendedor</a></li>
-			  <li><a href="#" class="sair" type="submit" onclick="document.location='/">Sair</a></li>
-			</ul>            
+			<div class="navbar-header">
+				<a class="navbar-brand" href="painel-vendedor" >Conta Vendedor</a>
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuSanduiche" aria-expanded="false">
+					<span class="sr-only">Menu</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+			</div>
+			<!-- BRAND -->
+
+			<div class="collapse navbar-collapse" id="menuSanduiche">
+				<!-- Links -->
+                <ul class="nav navbar-nav">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opções Vendedor<span class="caret"></span></a>
+                        <ul class="dropdown-menu" aria-labelledby="Opções Vendedor">
+                            <li class="nav-item"><a href="historico" class="nav-link" type="submit" >Ver Histórico de Vendas</a></li>
+                            <li class="nav-item active" ><a href="gerenciar" class="nav-link" type="submit" >Gerenciar Produtos<span class="sr-only">Atual</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a href="cadastro-vendedor" class="nav-link" type="submit" >Cadastrar Vendedor</a></li>
+                    <li class="nav-item"><a href="sair" class="nav-link" type="submit" >Sair</a></li>
+                </ul>
+			</div>
 		</div>
-	  </nav>
+	</nav>
+
     <div class="container">
         <div class="table-wrapper">
             <div class="table-title">
                 <div class="row">
                     <div class="col-sm-6">
-						<h2>Listagem <b>Produtos</b></h2>
+						<h2>Gerenciar <b>Produtos</b></h2>
 					</div>
 					<div class="col-sm-6">
 						<a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Novo Produto</span></a>
