--- a/Complete Code/stock/src/main/resources/templates/listagem-produtos.html
+++ b/Complete Code/stock/src/main/resources/templates/listagem-produtos.html
@@ -14,38 +14,38 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
   <body>
+
+    <!-- NAVBAR -->
     <nav class="navbar navbar-default">
-        <div class="container-fluid">
-        
-          <!-- BRAND -->
+      <div class="container-fluid">
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#alignment-example" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#" onclick="document.location='painel-cliente'">Conta Cliente</a>
+              <a class="navbar-brand" href="painel-cliente" >Conta Cliente</a>
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuSanduiche" aria-expanded="false">
+                  <span class="sr-only">Menu</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
           </div>
-            
-          <!-- COLLAPSIBLE NAVBAR -->
-          <div class="collapse navbar-collapse" id="alignment-example">
-            
-            <!-- Links -->
-            <ul class="nav navbar-nav">
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Produtos<span class="caret"></span></a>
-                <ul class="dropdown-menu" aria-labelledby="about-us">
-                  <li><a href="#" onclick="document.location='listagem-produtos'">Ver Produtos </a></li>
-                  <li><a href="#" onclick="document.location='carrinho-compras'">Ver Carrinho de Compras</a></li>
-                  <li><a href="#" onclick="document.location='pedidos'">Ver Pedidos</a></li>
-                </ul>
-              </li>
-              <li><a href="#" class="sair" type="submit" onclick="document.location='/'">Sair</a></li>
-            </ul>        
-          </div>      
-        </div>
-      </nav>
+          <!-- BRAND -->
+
+          <div class="collapse navbar-collapse" id="menuSanduiche">
+              <!-- Links -->
+              <ul class="nav navbar-nav">
+                <li class="nav-item active"><a href="produtos" class="nav-link" type="submit" >Ver Produtos<span class="sr-only">Atual</span></a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opções Comprador<span class="caret"></span></a>
+                  <ul class="dropdown-menu" aria-labelledby="Opções Comprador">
+                    <li class="nav-item"><a href="carrinho" class="nav-link" type="submit" >Ver Carrinho de Compras</a></li>
+                    <li class="nav-item"><a href="pedidos" class="nav-link" type="submit" >Ver Pedidos</a></a></li>
+                  </ul>
+                </li>
+                <li class="nav-item"><a href="sair" class="nav-link" type="submit" >Sair</li>
+              </ul>
+          </div>
+      </div>
+    </nav>
+    
     <div class="container">
         <div class="table-wrapper">
             <div class="table-title">
