--- a/Complete Code/stock/src/main/resources/templates/listagem-produtos.html
+++ b/Complete Code/stock/src/main/resources/templates/listagem-produtos.html
@@ -15,35 +15,35 @@
 </head>
   <body>
 
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-          <div class="navbar-header">
-              <a class="navbar-brand" href="painel-cliente" >Conta Cliente</a>
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuSanduiche" aria-expanded="false">
-                  <span class="sr-only">Menu</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-              </button>
-          </div>
-          <!-- BRAND -->
+      <!-- NAVBAR -->
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="painel-cliente" >Conta Cliente</a>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuSanduiche" aria-expanded="false">
+                    <span class="sr-only">Menu</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <!-- BRAND -->
 
-          <div class="collapse navbar-collapse" id="menuSanduiche">
-              <!-- Links -->
-              <ul class="nav navbar-nav">
-                <li class="nav-item active"><a href="produtos" class="nav-link" type="submit" >Ver Produtos<span class="sr-only">Atual</span></a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opções Comprador<span class="caret"></span></a>
-                  <ul class="dropdown-menu" aria-labelledby="Opções Comprador">
-                    <li class="nav-item"><a href="carrinho" class="nav-link" type="submit" >Ver Carrinho de Compras</a></li>
-                    <li class="nav-item"><a href="pedidos" class="nav-link" type="submit" >Ver Pedidos</a></a></li>
-                  </ul>
-                </li>
-                <li class="nav-item"><a href="sair" class="nav-link" type="submit" >Sair</li>
-              </ul>
-          </div>
-      </div>
+            <div class="collapse navbar-collapse" id="menuSanduiche">
+                <!-- Links -->
+                <ul class="nav navbar-nav">
+                  <li class="nav-item active"><a href="produtos" class="nav-link" type="submit" >Ver Produtos<span class="sr-only">Atual</span></a></li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opções Comprador<span class="caret"></span></a>
+                    <ul class="dropdown-menu" aria-labelledby="Opções Comprador">
+                        <li class="nav-item"><a href="carrinho" class="nav-link" type="submit" >Ver Carrinho de Compras</a></li>
+                        <li class="nav-item"><a href="pedidos" class="nav-link" type="submit" >Ver Pedidos</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item"><a href="sair" class="nav-link" type="submit" >Sair</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
     
     <div class="container">
@@ -61,13 +61,13 @@
             <table class="table table-striped table-hover">
                 <thead>
                     <tr th:each="produto: ${produtos}" >
-                      <td th:text="${produto.id}" />
+                      <td th:text="${produto.idProduto}" />
                       <td th:text="${produto.nome}" />
                       <td th:text="${produto.descricao}" />
                       <td th:text="${produto.preco}" />
-                      <td th:text="${produto.estoque}" />
+                      <td th:text="${produto.quantidade}" />
                       <td>
-                        <a href="#addCartModal" method="post" th:action="@{/add-carrinho/{id}(id=${produto.id})}" class="addCart" data-toggle="modal"><i class="material-icons" title="Adicionar ao carrinho">add_shopping_cart</i></a>
+                        <a href="#addCartModal" method="post" action="" th:action="@{/add-carrinho/{id}(id=${produto.idProduto})}" class="addCart" data-toggle="modal"><i class="material-icons" title="Adicionar ao carrinho">add_shopping_cart</i></a>
                       </td>
                     </tr>
                 </tbody>
